# twitter_clone

./: Dockerfile  README.md  docker-compose.yml  env.dev  heroku.yml  pyproject.toml
.github/workflows/: build.yml
feed_tweets/: admin.py  apps.py  urls.py
feed_tweets/migrations/: 0001_initial.py  0002_alter_feedpost_user.py
feed_tweets/models/: __init__.py  feed.py
feed_tweets/serializers/: __init__.py  feed_serializer.py
feed_tweets/tests/: test_feed_tweets_model.py
feed_tweets/viewsets/: __init__.py  feed_viewset.py
login/: admin.py  urls.py
login/migrations/: 0001_initial.py
login/models/: login.py
login/serializers/: login_serializer.py
login/tests/: test_login_model.py
login/viewsets/: __init__.py  login_viewset.py
post_tweets/: apps.py  urls.py
post_tweets/migrations/: 0001_initial.py
post_tweets/models/: post.py
post_tweets/serializers/: post_serializer.py
post_tweets/tests/: test_feed_tweets_model.py
post_tweets/viewsets/: post_viewset.py
twitter/: settings.py  urls.py
users/: admin.py  factories.py  urls.py
users/migrations/: 0001_initial.py  0002_alter_user_username.py  0002_delete_user.py  0003_initial.py  0004_user_email_alter_user_username.py  0005_userconnections.py
users/models/: __init__.py  user.py  user_connection.py  user_connections.py
users/serializers/: __init__.py  user_connections_serializer.py  user_serializer.py
users/tests/: test_user_connections_model.py  test_user_model.py
users/tests/test_serializers/: test_user.py
users/tests/tests_serializers/: test_user.py  (+1 more)
users/viewsets/: __init__.py  user_connections_viewset.py  user_viewset.py
