[tool.poetry]
name = "twitter-clone"
version = "0.1.0"
description = ""
authors = ["TheJackIsOnFire <alexsanderonfire@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
factory-boy = "^3.3.1"
djangorestframework = "^3.15.2"
django = "^5.1.3"
django-admin = "^2.0.2"
django-extensions = "^3.2.3"
pytest-django = "^4.9.0"
django-debug-toolbar = "^4.4.6"
psycopg = "^3.2.3"
psycopg-binary = "^3.2.3"
whitenoise = "^6.8.2"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
